# Monospace

./: .clang-format  .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
include/: error.hpp  monoclass.hpp  monofield.hpp  monospace.hpp  monotype.hpp  monovalue.hpp  offset.hpp  process.hpp  utils.hpp  vmread.hpp
src/: CMakeLists.txt  monoclass.cpp  monofield.cpp  monospace.cpp  monovalue.cpp
src/unix/: process.cpp  vmread.cpp
src/win32/: process.cpp  vmread.cpp
tests/: CMakeLists.txt  find_assembly.cpp  find_module.cpp  find_root_domain.cpp  get_pid.cpp  load_class_list.cpp
